Swagger 적용 부분 변경 - Pageable Class Parameter 정보 기입 추가 - 불필요 swagger-ui gradle 제거

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
       validation-timeout: 10000
       maximum-pool-size: 5
       connection-timeout: 300000
-      pool-name: test_h2
+      pool-name: test-h2-pool
 
   jpa:
     show-sql: true
