- Swagger3 api 파라메터 정의 수정 - isNew 추가 (insert, update 이전에 select 제거위함) - DTO <-> VO 분리 구성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ spring:
 
   jpa:
     show-sql: true
-    open-in-view: true
+    open-in-view: false
     hibernate:
       ddl-auto: create-drop
       use-new-id-generator-mappings: false
