- config 위치 변경 - Security OAuth2 login 테스트 (kakao, naver)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,3 +42,14 @@ spring:
   jackson:
     serialization:
       fail-on-empty-beans: false
+
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            clientId: kakao-client-id
+            clientSecret: kakao-client-secret
+          naver:
+            clientId: naver-client-id
+            clientSecret: naver-client-secret
